# branchcode

./: .gitignore  CI-CD.md  CONTRIBUTING.md  LICENSE  README.md  index.html  opencode.json  package-lock.json  package.json  vite.config.ts
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md  pull_request_template.yml
.github/workflows/: build.yml  release.yml
docs/: TERMINAL_INTEGRATION.md
docs/ssh_integration/: walkthrough.md
scripts/: cloudflare-worker.js  install.ps1  install.sh
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  git.rs  lib.rs  main.rs  opencode_client.rs  pty.rs  server.rs  ssh_client.rs  updater.rs
src/components/: App.tsx  ChatMessages.tsx  CodeBlock.tsx  DiffViewer.tsx  DirectoryPickerModal.tsx  FileDiff.tsx  FileExplorer.tsx  FileIcon.tsx  GitPanel.tsx  Settings.tsx  TerminalPanel.css  TerminalPanel.tsx  TopBar.tsx  UpdateModal.tsx
src/components/ssh/: OsIcons.tsx  SshPanel.tsx
src/hooks/: useChat.ts  useFileTree.ts  useGit.ts  useRemoteFileTree.ts  useSessions.ts  useSsh.ts  useTerminal.ts  useUpdate.ts  useVirtualScroll.ts
src/lib/: messageCache.ts  tauri.ts
