[package]
name = "branchcode"
version = "0.1.0"
description = "Branchcode - AI-native development environment"
authors = ["branchcode"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "branchcode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "s"
