[package]
name = "branchcode"
version = "0.1.0"
description = "Branchcode - AI-native development environment"
authors = ["branchcode"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
dirs = "6"
urlencoding = "2"
portable-pty = "0.8"
anyhow = "1"
dashmap = "6"
base64 = "0.22"

[lib]
name = "branchcode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "s"
